# Deployment-AI-Todo-Chatbot

./: .env.example  .gitignore  README.md  docker-compose.yml
.specify/memory/: constitution.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/src/: __init__.py  main.py
backend/src/agent/: __init__.py  todo_agent.py
backend/src/api/: __init__.py  auth.py  chat.py  deps.py  tasks.py
backend/src/core/: __init__.py  config.py  exceptions.py  rate_limit.py
backend/src/db/: __init__.py  init.py  session.py
backend/src/mcp/: __init__.py  server.py
backend/src/mcp/tools/: __init__.py  add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py  utils.py
backend/src/models/: __init__.py  conversation.py  message.py  task.py  user.py
backend/src/services/: __init__.py  auth.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  test_auth_endpoints.py
backend/tests/unit/: __init__.py  test_auth_service.py
charts/todo-chatbot/: .helmignore  Chart.yaml  values.yaml
charts/todo-chatbot/templates/: NOTES.txt  _helpers.tpl  namespace.yaml
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  UI_ENHANCEMENTS.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthForm.tsx  Chat.tsx  ChatInput.tsx  ChatMessage.tsx  Sidebar.tsx  (+1 more)
specs/001-k8s-deployment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+31 files in other folders)
